--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "author": "Alexander Vesyolkin <sashaasdzxc@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "electron": "^11.3.0",
+    "electron": "^13.0.0-beta.9",
+    "electron-nightly": "*",
     "jest": "^26.6.3"
   }
 }
