--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   "author": "Alexander Vesyolkin <sashaasdzxc@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "electron": "^13.0.0-beta.9",
-    "electron-nightly": "*",
+    "electron": "^12.0.2",
     "jest": "^26.6.3"
   }
 }
